--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "android": "expo start --android",
         "ios": "expo start --ios",
         "web": "expo start --web",
-        "test": "jest --watchAll",
+        "test": "jest",
         "lint": "expo lint"
     },
     "jest": {
@@ -18,9 +18,11 @@
         "@expo/vector-icons": "^14.0.2",
         "@react-native-async-storage/async-storage": "^1.24.0",
         "@react-native-community/datetimepicker": "^8.2.0",
-        "@react-navigation/native": "^6.0.2",
+        "@react-navigation/native": "^6.1.18",
+        "@react-navigation/native-stack": "^6.11.0",
         "@react-navigation/stack": "^6.4.1",
         "axios": "^1.7.4",
+        "date-fns-tz": "^3.1.3",
         "expo": "~51.0.26",
         "expo-constants": "~16.0.2",
         "expo-font": "~12.0.9",
@@ -43,11 +45,16 @@
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
+        "@jest/globals": "^29.7.0",
+        "@testing-library/jest-native": "^5.4.3",
+        "@testing-library/react-native": "^12.6.0",
         "@types/jest": "^29.5.12",
         "@types/react": "~18.2.45",
         "@types/react-test-renderer": "^18.0.7",
         "@types/uuid": "^10.0.0",
-        "jest": "^29.2.1",
+        "eslint": "^8.57.0",
+        "eslint-config-expo": "^7.1.2",
+        "jest": "^29.7.0",
         "jest-expo": "~51.0.3",
         "react-test-renderer": "18.2.0",
         "typescript": "~5.3.3"
